# calcam

./: .gitignore  .zenodo.json  AUTHORS.txt  CHANGELOG.txt  CITE.txt  LICENCE.txt  LICENSE  README.md  __init__.py  cadmodel.py  fitting.py  gui.py  image.py  image_filters.py  pyproject.toml  render.py  setup.py
.github/workflows/: release.yml
calcam/: __init__.py  __main__.py  __version__  cadmodel.py  calibration.py  config.py  coordtransformer.py  exceptions.py  fitting.py  geometry_matrix.py  geometry_matrix_old.py  gm.py  gui.py  image.py  image_enhancement.py  image_filters.py  io.py  machine_geometry.py  misc.py  movement.py  paths.py  pointpairs.py  qt_wrapper.py  raycast.py  raytrace.py  render.py  roi.py  utils.py  vtkinteractorstyles.py
calcam/builtin_image_sources/: calcam_file.py  imagefile.py
calcam/gui/: __init__.py  alignment_calib.py  alignment_calib.ui  alignment_calib_editor.ui  cad_edit.py  calcam.ui  core.py  fitting_calib.py  fitting_calib.ui  image_alignment_dialog.py  image_analyser.ui  image_analysis.py  launch_script.py  launcher.py  launcher.ui  line_coords.ui  movement_correction.py  qt_wrapper.py  qvtkrenderwindowinteractor.py  settings.py  settings.ui  view_designer.ui  viewer.py  viewer.ui  virtual_calib.py  virtual_calib_editor.ui  vtkinteractorstyles.py
calcam/image_sources/: calcam_file.py  imagefile.py
calcam/ui/: alignment_calib.ui  cad_viewer.ui  calcam.ui  image_analyser.ui  launcher.ui  settings.ui  split_field_definer.ui  view_designer.ui
calcam/usercode_examples/: machine_geometry.py  machine_geometry.py_
calcam1_file_converter/: convert_files.py  convert_files.ui
conda/: build_env.yaml  meta.yaml
docs/: .buildinfo  Makefile  background.html  conventions.html  genindex.html  index.html  installation.html  introduction.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: background.doctree  calib_tool_alignment.doctree  calib_tool_points.doctree  conventions.doctree  environment.pickle  gui_introduction.doctree  image_analyser.doctree  (+5 more)
graphics/: CC logo.psd
ui/: calcam.ui  chessboard_image_dialog.ui  launcher.ui  savename_dialog.ui  split_field_dialog.ui
usercode_examples/: image_source.py  machine_geometry.py
utils/: convert_files.py
(+127 files in other folders)
